--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,145 @@
     <title>HTML Form</title>
     <link rel="stylesheet" href="./style.css">
   </head>
-  <body>
+  <body class="text" >
     <h1>HTML Form</h1>
     <script type="text/javascript" src="./main.js"></script>
+    <form action="#">
+      <fieldset>
+        <legend>Personal information</legend>
+        <label class="label">
+          Surname:
+          <input class="margin" type="text" 
+            name="surname" required
+          >
+        </label>
+
+        <label class="label">
+          Name:
+          <input 
+            class="margin" 
+            type="text" 
+            name="name" 
+            required
+          >
+        </label>
+
+        <label class="label">
+          How old are You?
+          <input 
+            class="age margin" 
+            type="number" 
+            name="age" 
+            value="12"
+            min="0"
+            max="99" 
+            required
+          >
+        </label>
+
+        <label class="label">
+          Full date of birth:
+          <input 
+            class="DOB margin" 
+            type="date" 
+            name="DOB" 
+            value="mm/dd/yyyy" 
+            required
+          >
+        </label>
+
+        <label class="label">
+            I accept the term of the agreement
+          <input 
+            class="margin"
+            type="checkbox" 
+            name="agree" 
+          >
+        </label>
+      </fieldset>
+    </form>
+
+    <form class="text" action="#">
+      <fieldset>
+        <legend>Registration</legend>
+        <label class="label">
+          E-mail:
+          <input 
+            class="email margin" 
+            type="email" 
+            value="email@example.com" 
+          >
+        </label>
+
+        <label class="label">
+          Password:
+          <input class="margin" type="password" >
+        </label>
+      </fieldset>
+    </form>
+
+    <form class="text" action="#">
+      <fieldset>
+        <legend>An interesting fact about you!</legend>
+        <label class="label">
+          Do you love cats?
+          <input type="checkbox">Yes
+          <input type="checkbox">No
+        </label>
+
+        <label class="label">
+          What is your favorite color?
+          <input class="margin" type="color">
+        </label>
+
+        <label class="label">
+          What time do you go to bed?
+          <input class="margin" type="time">
+        </label>
+
+        <label class="label">
+          What are your favorite brand of cars?
+          <select class="margin" name="car">
+            <option value="Lexus">Lexus</option>
+            <option value="BMW">BMW</option>
+            <option value="Audi">Audi</option>
+          </select>
+        </label>
+
+        <label class="label">
+          How do you rate our work?
+          <input 
+            class="margin" 
+            type="range" 
+            min="1" 
+            max="10" 
+            value="0"
+          >
+        </label>
+      </fieldset>
+    </form>
+
+    <form class="text" action="#">
+      <fieldset>
+        <legend>Additional info:</legend>
+        <label class="label">
+          Comments:
+          <textarea 
+            name="comments" 
+            cols="20" 
+            rows="2">
+          </textarea>
+        </label>
+
+        <label class="label">
+          Would you recommend us?
+          <select class="margin" name="recommendation">
+            <option value="yes">yes</option>
+            <option value="no">no</option>
+          </select>
+        </label>
+      </fieldset>
+    </form>
+    <button class="button">Submit</button>
   </body>
 </html>
