--- a/src/index.html
+++ b/src/index.html
@@ -102,15 +102,17 @@
         <label class="margin label">
           Do you love cats?
           <input 
-            class="cats"
             type="radio" 
-            name="agree"
-          >Yes
-          <input
-            class="cats" 
+            name="cats"
+            value="agree"
+          >
+          Yes
+          <input 
             type="radio" 
-            name="disagree"
-          >No
+            name="cats"
+            value="disagree"
+          >
+          No
         </label>
 
         <label class="label">
